# risk_project

./: .dockerignore  .gitignore  Dockerfile  README.md  depurar.py  docker-compose.yml  excel_lite.py  notebooks_output.txt  pyproject.toml  rmse_output.txt  separar_fuentes.py  unificar_secop.py
.streamlit/: config.toml
backend/: feature_engineering.py  feature_labels.py  history.db  history.py  main.py  mlflow_tracker.py  predictor.py  quantitative_analysis.py  schemas.py  training_stats.py
contratos/: proyectos_depurados.csv  proyectos_secop1.csv  proyectos_secop1_lite.csv  secop2_activos_20260713_013711.csv  secop2_con_sobrecosto.csv
docs/: benchmark_clasificacion.csv  benchmark_clasificadores_resultados.csv  benchmark_regresion.csv  benchmark_rmse_dinamico.csv  consolidado_35_features.csv  consolidado_38_features.csv  contratos_anios.csv  contratos_features.csv  contratos_features_reducido.csv  contratos_macro.csv  feature_importances.csv  modelo.md  proceso.md  rmse_dinamico_resultados.csv  test_data.csv
estudio_data/: barrido_480_750.csv  bloqueadas.csv  estado_scan.json  estudios_detectados.csv  estudios_previos.csv  features.py  matriz_detectados.csv  matriz_inicial.ipynb  matriz_riesgos.csv  normalizar.py  resultados_finales.csv
estudio_modelos/: _add_bench_rmse.py  _investigate.py  _train_out.txt  analizar_resultados_rmse.py  desglose_rmse_predictor.py  entrenar_rmse_predictor.py  modelado.ipynb  modelado_v2.ipynb  modelado_v2_ejecutado.ipynb  modelo_final.ipynb  rmse_dinamico.py
frontend/: streamlit_app.py
models/: classifier.pkl  feature_names.pkl  (+12 more)
(+118 files in other folders)
