[project]
name = "risk-predictor"
version = "0.2.0"
description = "Predictor de sobrecostos en contratos publicos usando matrices de riesgo"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pandas>=2.2",
    "numpy>=2.0",
    "scikit-learn>=1.6",
    "joblib>=1.4",
    "pydantic>=2.10",
    "python-multipart>=0.0.18",
    "streamlit>=1.40",
    "requests>=2.32",
    "matplotlib>=3.10",
    "seaborn>=0.13",
    "plotly>=6.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
]
notebook = [
    "xgboost>=3.1",
    "jupyter>=1.1",
    "shap>=0.46",
]

[project.scripts]
train = "scripts.train_final_model:main"

[tool.ruff]
line-length = 100
target-version = "py313"
